# korlang

./: .gitignore  BuiltinFunctionTable.cpp  CMakeLists.txt  Code.h  DataType.cpp  DataType.h  Generator.cpp  Kind.cpp  Kind.h  Machine.cpp  Node.h  Parser.cpp  Printer.cpp  README.md  Scanner.cpp  Token.h  main.cpp
docs/: index.html  index.js  index.wasm  index1.html  korlang-compiler.wasm
